fixed intro button spacing

--- a/src/components/Intro/styles.scss
+++ b/src/components/Intro/styles.scss
@@ -22,6 +22,7 @@
     padding: 5px 10px;
     text-align: center;
     transition: all 0.1s ease;
+    display: inline-block;
     &:hover{
       background: $red;
       color: $white;
